objects/Product_Price__c.object
<CustomObject>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <description>This Field Store Ending Date for A product unit price</description>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Items_Description__c</fullName>
        <description>This Field Store Product Name</description>
        <label>Items Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oriplast_Product_Name__c</fullName>
        <description>This field is used to show Oriplast Product name in place order lwc</description>
        <formula>Oriplast_Product__r.Name</formula>
        <label>Oriplast Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oriplast_Product__c</fullName>
        <label>Oriplast Product</label>
        <referenceTo>OriPlast_Product__c</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Product_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Unique_Key__c</fullName>
        <formula>Oriplast_Product__r.OriPlast_Product_Unique_Key__c</formula>
        <label>Product Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This field is made for lwc place order</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>This Field Store Sales Type for A product</description>
        <label>Sales Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <description>This Field Store Starting Date for A product unit price</description>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>This Field Store  A product unit price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_Code__c</fullName>
        <description>This Field Store UOM of a product</description>
        <label>Unit of Measure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Price</label>
    <nameField>
        <displayFormat>PN-{000000}</displayFormat>
        <label>Product Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>